deployment/catalog-api/overlays/preview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
spec:
  selector:
    app.kubernetes.io/name: catalog-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
