deployment/catalog-api/overlays/preview/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: catalog-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: catalog-api-pr-0.tecklab.dk
spec:
  parentRefs:
    - name: external-gateway
      namespace: kgateway-system
  hostnames:
    - catalog-api-pr-0.tecklab.dk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - kind: Service
          name: catalog-api
          port: 80
